step 32 - fix done